update themeButton styling to prevent overlapping off header bar at smaller screen sizes

--- a/src/components/ThemeToggle/styles.module.scss
+++ b/src/components/ThemeToggle/styles.module.scss
@@ -1,9 +1,10 @@
 @import './../../styles/variables.scss';
 
 .themeButton {
-    margin-top: 0.1rem;
+    margin-top: 0.25rem;
     margin-right: 0.4rem;
-    width: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 .dark {
